kubernetes/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: meter-reading
  labels:
    app: meter-reading-api
spec:
  type: ClusterIP
  selector:
    app: meter-reading-api
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
